Fixed GCI icon spacing in navbar (#519) (#520)

--- a/css/_custom.scss
+++ b/css/_custom.scss
@@ -28,9 +28,10 @@
   background-image: url("https://raw.githubusercontent.com/fossasia/gci17.fossasia.org/gh-pages/img/gci-logo.png");
   background-size: contain;
   background-repeat: no-repeat;
-  padding: 0 16px;
+  padding: 0 2px 0 16px;
   padding-top: 0px;
   font-size: 1rem;
+  cursor: pointer;
 }
 
 .seperator {
